# jupyter-Kqlmagic

./: .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FAQ.html  HACKING.txt  HISTORY.md  HISTORY.rst  KqlMagic.pyproj  KqlMagic.sln  LICENSE.TXT  MANIFEST.in  NEWS.txt  NOTICE.TXT  README.md  README.rst  TODO.txt  azure_bdist_wheel.py  build_packages.py  buildout.cfg  dev_requirements.txt  modify_setup_py_is_custom.py  run_black.sh  run_pytest.bat  run_tests.bat  run_tests.sh  run_upgrade.bat  run_upgrade_custom.bat  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
azure/Kqlmagic/: Kql_response_wrapper.py  __init__.py  _debug_utils.py  _meta.py  _require.py  _test.py  _version.py  aad_helper.py  activate_kernel_command.py  adal_token_cache.py  ai_engine.py  aimon_engine.py  allow_py_comments_before_cell.py  allow_single_line_cell.py  aria_engine.py  bug_report.py  cache_client.py  cache_engine.py  column_guesser.py  commands_table.py  connection.py  constants.py  crypto.py  database_html.py  dependencies.py  dict_db_storage.py  display.py  dpapi.py  dpapi_crypto.py  dpapi_crypto_msal.py  draft_client.py  email_notification.py  engine.py  exceptions.py  fernet_crypto.py  help.py  help_html.py  http_client.py  ipython_api.py  kql_client.py  (+24 more)
azure/tests/: t_est_column_guesser.py  t_est_magic.py  t_est_parse.py  test_basics.py  test_column_guesser.py  test_crypto.py  test_dict_db_storage.py  test_email_notification.py  test_login_code_email.py  test_magic.py  test_options.py  test_palettes_loop.py  test_parse.py  test_sso_dpapi.py  test_sso_storage.py  tests_config.ini
binder/: requirements.txt
kqlmagic_kernel/: CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  run_upgrade.bat  setup.cfg  setup.py
kqlmagic_kernel/kqlmagic_kernel/: __init__.py  __main__.py  _version.py  check.py  install.py  kernel.py
kqlmagic_kernel/kqlmagic_kernel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kqlmagic_kernel/kqlmagic_kernel/spec/: kernel.json
notebooks/: ColorYourCharts.ipynb  ParametrizeYourQuery.ipynb  QuickStart-Kqlmagic-Kernel.ipynb  QuickStart.ipynb  QuickStartAI.ipynb  QuickStartLA.ipynb  abc
notebooks/dsn/: odbc.ini
notebooks/files/: csv_file.csv  imm.csv
notebooks/xyz/: q_8ca9f27955bfc7f8f3d097824ba132d2c9c79171.json  q_c5e96d5a6737cd01dffe75bc66ff2ada94e8284d.json
src/kql/: __init__.py  ai_client.py  ai_engine.py  cache_client.py  cache_engine.py  column_guesser.py  connection.py  constants.py  database_html.py  display.py  draft_client.py  file_client.py  file_engine.py  help_html.py  kql_client.py  kql_engine.py  kql_magic.py  kql_proxy.py  (+12 more)
(+4 files in other folders)
