# -------------------------------------------------------------------------
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License. See License.txt in the project root for
# license information.
# --------------------------------------------------------------------------

[build-system]
requires=["jupyter_packaging~=0.9,<2", "ipykernel", "jupyter_client", "kqlmagic>=0.1.114"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-releaser]
skip = ["check-links"]

[tool.tbump.version]
current = "0.1.0"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "kqlmagic_kernel/_version.py"
