
# -------------------------------------------------------------------------
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License. See License.txt in the project root for
# license information.
# --------------------------------------------------------------------------

[metadata]
name = kqlmagic_kernel
version = attr: kqlmagic_kernel._version.__version__
description = 'A Jupyter kernel for Kqlmagic.'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.txt
author = 'Michael Binshtock'
author_email = michabin@microsoft.com
url = https://github.com/Microsoft/jupyter-Kqlmagic-Kernel
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Customer Service
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Database
    Topic :: Database :: Front-Ends
    Framework :: IPython
    Framework :: Jupyter
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    kqlmagic>=0.1.114
    jupyter_client>=4.3.0
    ipykernel

[options.extras_require]
test = pytest;nbconvert;jupyter_kernel_test;nbconvert

[bdist_wheel]
universal=1

[wheel]
universal = 1